
New Features:

- BugUtil
	Added export(), exportFunction(), extend(), and extendFunction() for injecting functions into EntryPoints modules
- Configuration
	Added <export> and <extend> XML elements that call exportFunction() and extendFunction() respectively
- BugData
	New API for storing data in CyGame's script data that is 100% compatible with SdToolKit

Improvements:

- Removed EntryPoints Modules
	CvAppInterface, CvDiplomacyInterface, CvOptionsScreenCallbackInterface, and CvRandomEventInterface
	If your mod needs to add code to any of these modules, use <export> and <extend> or use the original BTS modules as a base

Bug Fixes:

- Better Espionage
	Removed unused EspionageEventManager
- AttitudeUtil
	Limits Worst Enemy checks to teams that are alive


____________________________________________________________________________________________________
BUG 4.3 released February 16th, 2010

CHANGES

New Features:

- Main Interface
	Can choose from three sizes for the build/action buttons
	Added a button to bring up the BUG Options Screen (top left)
- Espionage Advisor
	New layout shows EPs spent against you and icons for passive missions
	Can swap cities and missions lists to see cost in each city for a single mission
	New GLANCE-style tab shows EPs spending on and by each rival you've met
- Technology Chooser
	Added color-coded shadow denoting each technology's era
- BUFFY
	Barbarian Uprising events require Priesthood

Improvements:

- Main Interface
	Unit Plot drawing improvements (pre-work only at the moment)
- Great Person Bar
	Added city's total GP/Turn to hover.
- City Screen
	Can select which tiles to count in Raw Yields when Civ starts
- Foreign Advisor
	Can select how to display attitudes: numbers, smilies, or both
	Shows technologies that you cannot trade to rivals
- Technology Chooser
	Added hover to GP Research icons showing the preferred order
- Unit Naming
	Unnamed initial units are named when you found your capital